<resources>
    <string name="app_name">Expediente Salud Digital</string>
    <string name="cedula_paciente">Cedula</string>
    <string name="nombre_paciente">Nombre</string>
    <string name="edad_paciente">Edad</string>
    <string name="titulo_registrar">Registro</string>
    <string name="contrasenna_paciente">Contraseña</string>
    <string name="direccion_paciente">Otras Señas</string>
    <string name="registrar_paciente">Registrar</string>
    <string name="inicio_registrar">Registrarse</string>
    <string name="mensaje_provincia">Seleccione una provincia</string>
    <string name="mensaje_canton">Seleccione un cantón</string>
    <string name="mensaje_distrito">Seleccione un distrito</string>
    <string name="mensaje_tipo_sangre">Seleccione su tipo de sangre</string>
    <string name="mensaje_estado_civil">Seleccione su estado civil</string>
    <string name="mensaje_edad">Edad</string>
    <string name="pasword_paciente">Contraseña</string>
    <string name="boton_actualizar">Ver y Actualizar</string>
    <string name="tipo_sangre">Tipo de sangre</string>
    <string name="telefono_paciente">Telefono</string>
    <string name="domicilio_paciente">Domicilio</string>
    <string name="spinner_provincia">Seleccione una opcion</string>
    <string name="afirmacion_dialogo">Si</string>
    <string name="negacion_dialogo">No</string>
</resources>